# perceptron

./: .gititgnore  README.md  perceptron.cabal  stack.yaml
app/: Main.hs
app/teste/: font1_a.txt  font1_b.txt  font1_c.txt  font1_d.txt  font1_e.txt  font1_j.txt  font1_k.txt  font2_a.txt  font2_b.txt  font2_c.txt  font2_d.txt  font2_e.txt  font2_j.txt  font2_k.txt  font3_a.txt  font3_b.txt  font3_c.txt  font3_d.txt  font3_e.txt  font3_j.txt  font3_k.txt
app/treino/: font1_a.txt  font1_b.txt  font1_c.txt  font1_e.txt  font1_j.txt  font1_k.txt  font2_a.txt  font2_b.txt  font2_c.txt  font2_d.txt  font2_e.txt  font2_j.txt  font2_k.txt  font3_a.txt  font3_b.txt  font3_c.txt  font3_d.txt  font3_e.txt  font3_j.txt  font3_k.txt
src/: Perceptron.hs
test/: Main.hs
test/teste/: font1_a.txt  font1_b.txt  font1_c.txt  font1_d.txt  font1_e.txt  font1_j.txt  font1_k.txt  font2_a.txt  font2_b.txt  font2_c.txt  font2_d.txt  font2_e.txt  font2_j.txt  font2_k.txt  font3_a.txt  font3_b.txt  font3_c.txt  font3_d.txt  font3_e.txt  font3_j.txt  font3_k.txt
test/treino/: font1_c.txt  font1_e.txt  font1_j.txt  font1_k.txt  font2_c.txt  font2_d.txt  font2_e.txt  font2_j.txt  font2_k.txt  font3_b.txt  font3_c.txt  font3_d.txt  font3_e.txt  font3_j.txt  font3_k.txt
