name:                perceptron
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/perceptron#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Perceptron
  build-depends:       base >= 4.7 && < 5
                     , matrix
  default-language:    Haskell2010
  ghc-options:         -Wall

executable perceptron-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , perceptron
                     , matrix
                     , directory
                     , filepath
  default-language:    Haskell2010

test-suite perceptron-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , perceptron
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/perceptron
