cabal-version:       2.4
name:                perceptron
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Valdsonjr/perceptron
license:             ISC
license-file:        LICENSE
author:              Valdson Francisco Silva Santos Júnior
maintainer:          valdsonfrancisco.jr@gmail.com
copyright:           2017 Valdson Francisco
category:            Web
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Perceptron
  build-depends:       base ^>=4.14.3.0
  default-language:    Haskell2010
  ghc-options:
        -Wall
        -Wunused-packages
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints
        -fwrite-ide-info

test-suite perceptron-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , perceptron
  ghc-options:
        -Wall
        -Wunused-packages
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints
        -fwrite-ide-info
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Valdsonjr/perceptron
