cabal-version:      2.4
name:               perceptron
version:            0.1.0.0
synopsis:           a simple perceptron implementation

-- A longer description of the package.
-- description:
homepage:           https://github.com/Valdsonjr/perceptron

-- A URL where users can report bugs.
-- bug-reports:
license:            ISC
license-file:       LICENSE
author:             Valdson Francisco Silva Santos Júnior
maintainer:         by_valdson@live.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
  hs-source-dirs:      src
  exposed-modules:     Perceptron
  build-depends:       base ^>=4.16.4.0
  default-language:    Haskell2010
  ghc-options:
        -Wall
        -Wunused-packages
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints
        -fwrite-ide-info

test-suite perceptron-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , perceptron
                     , hspec
  ghc-options:
        -Wall
        -Wunused-packages
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints
        -fwrite-ide-info
  default-language:    Haskell2010
